crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl_produces_error_message__case_5_miri_closures.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: cargo
  args:
    - miri
    - run
    - "-q"
    - "--"
    - "--loop=closures"
  env:
    MIRIFLAGS: "-Zmiri-disable-isolation"
  stdin: nil * 2;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
Error: type error in binary operator `*`: lhs has type `Nil`, but rhs has type `Number`
   ╭─[<input>:1:1]
   │
 1 │ nil * 2;
   │ ─┬─ ┬ ┬  
   │  │  │ ╰── this is of type `Number`
   │  │  │    
   │  │  ╰──── the operator in question
   │  │       
   │  ╰─────── this is of type `Nil`
   │ 
   │ Help: operator `*` can only be applied to numbers
───╯
